--- a/projects/case-angular-library/styles/variables/_forms.scss
+++ b/projects/case-angular-library/styles/variables/_forms.scss
@@ -31,6 +31,8 @@ $input-disabled-placeholder-color: bulmaRgba(
   0.3
 ) !default;
 
+$label-color: $grey !default;
+
 //Datepicker
 $calendar-height: 268px !default;
 $year-height: 42px !default;
